software hover scale causing scrollbar bug fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,7 +400,7 @@ textarea {
 
 .software:hover {
   cursor: pointer;
-  transform: scale(1.8);
+  transform: scale(1.3);
   box-shadow: 0px 6px 6px rgba(244, 150, 116, 0.6);
 }
 
